optional/k3s/kubernetes/apps/navidrome.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: navidrome
---
apiVersion: v1
kind: Pod
metadata:
  name: navidrome-app
  namespace: navidrome
  labels:
    app: navidrome-app
spec:
  containers:
    - name: navindrome-container
      image: deluan/navidrome:0.47.0
      ports:
        - containerPort: 4533
      imagePullPolicy: Always
      volumeMounts:
        - mountPath: /music
          name: navidrome-music-path
        - mountPath: /data
          name: navidrome-data
  volumes:
    - name: navidrome-music-path
      hostPath:
        path: /opt/kubernetes/navidrome/music
        type: DirectoryOrCreate
    - name: navidrome-data
      hostPath:
        path: /opt/kubernetes/navidrome/data
        type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
  namespace: navidrome
spec:
  ports:
  - port: 4533
    targetPort: 4533
    name: tcp
  selector:
    app: navidrome-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-ingress
  namespace: navidrome
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
        - path: /music
          pathType: Prefix
          backend:
            service:
              name: navidrome-service
              port: 
                number: 4533
